# covidfaq

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Dockerfile  Dockerfile.rasa  README.md  app.yaml  app.yml  config.fr.yml  config.yml  credentials.yml  job.yml  pyproject.toml  secrets.dev.ca2.yaml  setup.cfg
.circleci/: config.yml
clustering/: infersent_test.ipynb  tfidf_kmeans.ipynb
covidapp/: README  app-github.py  doc1.txt  doc2.txt  doc3.txt  doc4.txt
covidapp/templates/: session.html
covidbot/: domain.yml
covidbot/data/: nlu.md  responses.md  test_stories.md
covidfaq/: config.py  k8s.py  main.py  segment.py  utils.py
covidfaq.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
data/: clustered_tfidf.csv  domain.yml  nlu.md  responses.md  website_questions_22032020_13h00.csv
data/en/: nlu.md  (+2 more)
deploy/: app.dev.ca2.yaml  app.yaml  secrets.dev.ca2.yaml
experiments/: QuesSort Data Analysis.ipynb  QuesSort Doc2Vec.ipynb  QuesSort LSA and AHC.ipynb  QuesSort Linguistic Analysis FR.ipynb  QuesSort Pipeline - Dependency Based.ipynb  QuesSort Pipeline - Filter style - Linguistic.ipynb  QuesSort Pipeline - Filter style.ipynb  QuesSort Pipeline FR.ipynb  QuesSort Pipeline.ipynb  QuesSort Topic Modelling.ipynb  QuesSort WcDe AHC.ipynb  README.md  functions.py  helpers.py
labelling/: label.py  run_local.sh  run_on_cluster.sh
scrape/: 0_en.json  0_fr.json  1_en.json  1_fr.json  2_en.json  2_fr.json  3_en.json  3_fr.json  4_en.json  4_fr.json  5_fr.json  6_fr.json  8_en.json  8_fr.json  9_fr.json  convert_to_txt.py  faq_en.json  faq_fr.json  mainpage_en.json  mainpage_fr.json  nlu_en.md  nlu_fr.md  responses_fr.md  scrape.py
scripts/: build_rasa_dataset.py  fetch_model.py  scraper.py
search/: build_index.py  elasticsearch.ipynb  search_index.py  utils.py
tests/: conftest.py  test_app.py
(+395 files in other folders)
