[tool.poetry]
name = "covidfaq"
version = "0.0.0"
description = ""
authors = ["Dialogue <devs@dialogue.co>"]

[tool.poetry.dependencies]
python = "^3.8"
rasa = "^1.8"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"
pylama = "^7.7.1"

[[tool.poetry.source]]
name = "dialogue"
url = "https://pypi.fury.io/dialogue"
[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

